--- a/bundles/pom.xml
+++ b/bundles/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>name.abuchen.zulu</groupId>
 		<artifactId>jre</artifactId>
-		<version>8.30.0.1-patch1</version>
+		<version>8.31.0.1</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -17,7 +17,7 @@
 		<!-- to test locally, place files in a local directory
 		<download.url>file:///Users/.../zulu/</download.url>
 		-->
-		<download.file>zulu8.30.0.1-jdk8.0.172-</download.file>
+		<download.file>zulu8.31.0.1-jdk8.0.181-</download.file>
 		<download.filePostfix>os_arch.zip</download.filePostfix>
 		<download.unzippedFolder>${download.file}</download.unzippedFolder>
 		<download.unzippedFolderPostfix>os_arch</download.unzippedFolderPostfix>
