--- a/bundles/name.abuchen.zulu.jre.macosx.x86_64/pom.xml
+++ b/bundles/name.abuchen.zulu.jre.macosx.x86_64/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>name.abuchen.zulu</groupId>
 		<artifactId>bundles</artifactId>
-		<version>8.31.0.1</version>
+		<version>8.46.0.19</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -15,6 +15,7 @@
 	<properties>
 		<download.filePostfix>macosx_x64.zip</download.filePostfix>
 		<download.unzippedFolderPostfix>macosx_x64</download.unzippedFolderPostfix>
+		<download.unzippedFolderJreLoc>zulu-8.jdk/Contents/Home/jre</download.unzippedFolderJreLoc>
 		<jre.folder>Contents/Home</jre.folder>
 	</properties>
 
