--- a/bundles/pom.xml
+++ b/bundles/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>name.abuchen.zulu</groupId>
 		<artifactId>jre</artifactId>
-		<version>8.31.0.1</version>
+		<version>8.46.0.19</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -17,10 +17,11 @@
 		<!-- to test locally, place files in a local directory
 		<download.url>file:///Users/.../zulu/</download.url>
 		-->
-		<download.file>zulu8.31.0.1-jdk8.0.181-</download.file>
+		<download.file>zulu8.46.0.19-ca-jdk8.0.252-</download.file>
 		<download.filePostfix>os_arch.zip</download.filePostfix>
 		<download.unzippedFolder>${download.file}</download.unzippedFolder>
 		<download.unzippedFolderPostfix>os_arch</download.unzippedFolderPostfix>
+    <download.unzippedFolderJreLoc>jre</download.unzippedFolderJreLoc>
 		<download.type>zip</download.type>
 		<jre.folder>jre</jre.folder>
 	</properties>
@@ -90,7 +91,7 @@
 										<unzip dest="${project.build.directory}/downloads/" src="${project.build.directory}/${download.file}${download.filePostfix}"/>
 									</else>
 								</ac:if>
-								<move file="${project.build.directory}/downloads/${download.unzippedFolder}${download.unzippedFolderPostfix}/jre" tofile="${project.build.directory}/downloads/${jre.folder}"/>
+								<move file="${project.build.directory}/downloads/${download.unzippedFolder}${download.unzippedFolderPostfix}/${download.unzippedFolderJreLoc}" tofile="${project.build.directory}/downloads/${jre.folder}"/>
 							</target>
 						</configuration>
 					</execution>
